force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/nMONITOR__Informatica_Cloud_Integration__c.object-meta.xml
<CustomObject>
    <description>Object housing metadata, statistics, exceptions, and other data relevant to the Informatica Cloud Integration managed by nCino Data Services.</description>
    <label>Informatica Cloud Integration</label>
    <nameField>
        <label>Informatica Cloud Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informatica Cloud Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>