force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Collateral_Bundle_Version__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Collateral_Bundle_Version__c</fullName>
    <description>Informatica Cloud Bundle Version for nCino_Collateral2_Standard.</description>
    <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
    <label>Collateral Bundle Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>