force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Complete__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicating that the Monitoring processes are complete.</description>
    <inlineHelpText>Field indicating that the Monitoring processes are complete.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>