force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Connection_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Connection_Errors__c</fullName>
    <description>Connection Errors for Connections Task.</description>
    <inlineHelpText>Connection Errors for Connections Task.</inlineHelpText>
    <label>Connection Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>