force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Connection_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Connection_Exceptions__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Connection Exceptions for Connections Task.</description>
    <inlineHelpText>Connection Exceptions for Connections Task.</inlineHelpText>
    <label>Connection Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>