force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Connection_Role__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Connection_Role__c</fullName>
    <description>Connection Role translated by Informatica Cloud.</description>
    <inlineHelpText>Connection Role translated by Informatica Cloud.</inlineHelpText>
    <label>Connection Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>