force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Contact__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the probable exception Record.</description>
    <inlineHelpText>Indicates the probable exception Record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
    <relationshipName>Informatica_Cloud_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>