force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Contact_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Contact_Errors__c</fullName>
    <description>Contact Errors for Contact Task.</description>
    <inlineHelpText>Contact Errors for Contact Task.</inlineHelpText>
    <label>Contact Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>