force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Contact_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Contact_Exceptions__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Contact Exceptions for Contact Task.</description>
    <inlineHelpText>Contact Exceptions for Contact Task.</inlineHelpText>
    <label>Contact Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>