force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Covenant_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Covenant_Errors__c</fullName>
    <description>Covenant Errors for Covenant, Loan Covenant, Account Covenant, and Covenant Compliance Tasks.</description>
    <inlineHelpText>Covenant Errors for Covenant, Loan Covenant, Account Covenant, and Covenant Compliance Tasks.</inlineHelpText>
    <label>Covenant Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>