force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Current_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Current_Product_Line__c</fullName>
    <description>Contains Product Line value on existing Loan Record in nCino.</description>
    <inlineHelpText>Contains Product Line value on existing Loan Record in nCino.</inlineHelpText>
    <label>Current Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>