force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__CUSO_Bundle_Version__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__CUSO_Bundle_Version__c</fullName>
    <description>Informatica Cloud Bundle Version for nCino_CUSO_Syncrhonization_Standard</description>
    <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
    <label>CUSO Bundle Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>