force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Deposit_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Deposit_Exceptions__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Deposit Exceptions for Deposit Task.</description>
    <inlineHelpText>Deposit Exceptions for Deposit Task.</inlineHelpText>
    <label>Deposit Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>