force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Entity_Involvement_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Entity_Involvement_Errors__c</fullName>
    <description>Entity Involvement Errors for Entity Involvement Task.</description>
    <inlineHelpText>Entity Involvement Errors for Entity Involvement Task.</inlineHelpText>
    <label>Entity Involvement Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>