force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Household__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the probable exception Household Relationship Record</description>
    <inlineHelpText>Indicates the probable exception Household Relationship Record</inlineHelpText>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informatica Cloud Integrations (Household)</relationshipLabel>
    <relationshipName>Informatica_Cloud_Integrations1</relationshipName>
    <type>Lookup</type>
</CustomField>