force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__IsCollateral__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__IsCollateral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Exception Record should be a Collateral Record.</description>
    <inlineHelpText>Signifies that the Exception Record should be a Collateral Record.</inlineHelpText>
    <label>IsCollateral</label>
    <type>Checkbox</type>
</CustomField>