force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__IsCollateralPledged__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__IsCollateralPledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCollateralPledged</label>
    <type>Checkbox</type>
</CustomField>