force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__IsConnection__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__IsConnection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Exception Record should be a Connection Record.</description>
    <inlineHelpText>Signifies that the Exception Record should be a Connection Record.</inlineHelpText>
    <label>IsConnection</label>
    <type>Checkbox</type>
</CustomField>