force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__IsCovenant__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__IsCovenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Exception Record should be a Covenant Record.</description>
    <inlineHelpText>Signifies that the Exception Record should be a Covenant Record.</inlineHelpText>
    <label>IsCovenant</label>
    <type>Checkbox</type>
</CustomField>