force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__isDeposit__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__isDeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Exception Record should be a Deposit Record.</description>
    <inlineHelpText>Signifies that the Exception Record should be a Deposit Record.</inlineHelpText>
    <label>isDeposit</label>
    <type>Checkbox</type>
</CustomField>