force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__IsEntityInvolvement__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__IsEntityInvolvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Exception Record should be an Entity Involvement Record.</description>
    <inlineHelpText>Signifies that the Exception Record should be an Entity Involvement Record.</inlineHelpText>
    <label>IsEntityInvolvement</label>
    <type>Checkbox</type>
</CustomField>