force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Loan__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Loan Record causing the Exception, if it already exists in nCino.</description>
    <inlineHelpText>Indicates the Loan Record causing the Exception, if it already exists in nCino.</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
    <relationshipName>Informatica_Cloud_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>