force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Loan_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Loan_Errors__c</fullName>
    <description>Loan Errors across Loan and Sub Loan Tasks.</description>
    <inlineHelpText>Loan Errors across Loan and Sub Loan Tasks.</inlineHelpText>
    <label>Loan Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>