force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Logged__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Logged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Batch Apex. Signifies that an Exception Record has been added to the number of exceptions for that day.</description>
    <inlineHelpText>Updated by Batch Apex. Signifies that an Exception Record has been added to the number of exceptions for that day.</inlineHelpText>
    <label>Logged</label>
    <type>Checkbox</type>
</CustomField>