force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Migration_Bundle__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Migration_Bundle__c</fullName>
    <description>Name and Bundle version for any one Migration Bundle used.</description>
    <inlineHelpText>Name and Bundle version for any one Migration Bundle used.</inlineHelpText>
    <label>Migration Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>