force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Monitor__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Monitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox leveraged in Monitoring automation.</description>
    <inlineHelpText>Checkbox leveraged in Monitoring automation.</inlineHelpText>
    <label>Monitor</label>
    <type>Checkbox</type>
</CustomField>