force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Monitoring_Task_Flow__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Monitoring_Task_Flow__c</fullName>
    <description>Set the name of the Monitor Task Flow.</description>
    <inlineHelpText>Set the name of the Monitor Task Flow.</inlineHelpText>
    <label>Monitoring Task Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>