force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__On_Demand_Email_to_Case__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__On_Demand_Email_to_Case__c</fullName>
    <defaultValue>&quot;datamonitoring@ncino.com&quot;</defaultValue>
    <description>On-Demand Email to Case</description>
    <inlineHelpText>On-Demand Email to Case</inlineHelpText>
    <label>On-Demand Email to Case</label>
    <type>Email</type>
</CustomField>