force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Participation_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Participation_Errors__c</fullName>
    <description>Participation Errors for Participation Task.</description>
    <inlineHelpText>Participation Errors for Participation Task.</inlineHelpText>
    <label>Participation Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>