force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Participation_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Participation_Exceptions__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Participation Exceptions for Participation Task.</description>
    <inlineHelpText>Participation Exceptions for Participation Task.</inlineHelpText>
    <label>Participation Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>