force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Product Package Record associated with the Loan Exception.</description>
    <inlineHelpText>Indicates the Product Package Record associated with the Loan Exception.</inlineHelpText>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
    <relationshipName>Informatica_Cloud_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>