force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Record_Age__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Record_Age__c</fullName>
    <formula>nMONITOR__Today__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>