force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Relationship_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Relationship_Errors__c</fullName>
    <description>Relationship errors across Relationship and Household Relationship Tasks.</description>
    <inlineHelpText>Relationship errors across Relationship and Household Relationship Tasks.</inlineHelpText>
    <label>Relationship Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>