force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Relationship_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Relationship_Exceptions__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Relationship Exceptions across Relationship and Household Relationship Tasks.</description>
    <inlineHelpText>Relationship Exceptions across Relationship and Household Relationship Tasks.</inlineHelpText>
    <label>Relationship Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>