force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Relationship_Name__c</fullName>
    <description>Holds the value Field Mapped to &apos;Name&apos; on the Relationship Object. Corresponds to the row of exception data.</description>
    <inlineHelpText>Holds the value Field Mapped to &apos;Name&apos; on the Relationship Object. Corresponds to the row of exception data.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>