force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Secure_Agent_Data_inactive__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Secure_Agent_Data_inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Secure Agent leveraged for the ICS Integration is currently up and running.</description>
    <inlineHelpText>Indicates that the Secure Agent leveraged for the ICS Integration is currently up and running.</inlineHelpText>
    <label>Secure Agent Data inactive</label>
    <type>Checkbox</type>
</CustomField>