force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Secure_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Secure_Agent_Id__c</fullName>
    <description>Id value of Secure Agent to monitor.</description>
    <inlineHelpText>Id value of Secure Agent to monitor.</inlineHelpText>
    <label>Secure Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>