force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Secure_Agent_Process_inactive__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Secure_Agent_Process_inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Secure Agent process used for ICRT Integrations is inactive.</description>
    <inlineHelpText>Indicates that the Secure Agent process used for ICRT Integrations is inactive.</inlineHelpText>
    <label>Secure Agent Process inactive</label>
    <type>Checkbox</type>
</CustomField>