force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Start_Time__c</fullName>
    <description>Time that the Task Flow was initiated in Informatica Cloud.</description>
    <inlineHelpText>Time that the Task Flow was initiated in Informatica Cloud.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>