force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Task_Flow_to_Monitor__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Task_Flow_to_Monitor__c</fullName>
    <description>The name of the Task Flow being monitored with Setting Record.</description>
    <inlineHelpText>Specify the name of the Task Flow being monitored with Setting Record. If multiple Task Flows are present, create multiple Setting Records.</inlineHelpText>
    <label>Task Flow to Monitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>