force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Today__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Today__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Date</type>
</CustomField>