force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Total_Errors__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Total_Errors__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Total Number of Errors reading from source and writing to nCino.</description>
    <inlineHelpText>Total Number of Errors reading from source and writing to nCino.</inlineHelpText>
    <label>Total Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>