force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Total_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Total_Exceptions__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Total Number of Exceptions across all Standard Tasks.</description>
    <inlineHelpText>Total Number of Exceptions across all Standard Tasks.</inlineHelpText>
    <label>Total Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>