force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Translated_Product__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Translated_Product__c</fullName>
    <description>Product translated by Informatica Cloud.</description>
    <inlineHelpText>Product translated by Informatica Cloud.</inlineHelpText>
    <label>Translated Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>