force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Translated_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Translated_Product_Line__c</fullName>
    <description>Product Line translation in Informatica Cloud.</description>
    <inlineHelpText>Product Line translation in Informatica Cloud.</inlineHelpText>
    <label>Translated Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>