force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Translated_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Translated_Product_Type__c</fullName>
    <description>Product Type translated by Informatica Cloud.</description>
    <inlineHelpText>Product Type translated by Informatica Cloud.</inlineHelpText>
    <label>Translated Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>