force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Treasury_Management_Bundle_Version__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Treasury_Management_Bundle_Version__c</fullName>
    <description>Informatica Cloud Bundle Version for nCino_Treasury_Management_Standard</description>
    <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
    <label>Treasury Management Bundle Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>