force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Unique_Identifier__c</fullName>
    <description>Represents the Loan Number, Collateral Account Number, CIF or Customer Number, or any other unique identifier used to allow the Integration to synchronize with a Record from the external system.</description>
    <inlineHelpText>Unique Identifier for a given row from the source external system.</inlineHelpText>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>