force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/fields/nMONITOR__User_Friendly_Agent_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__User_Friendly_Agent_Data_Status__c</fullName>
    <formula>IF( nMONITOR__Secure_Agent_Data_inactive__c = FALSE, &quot;Down&quot;, &quot;Running&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Friendly Agent Data Status</label>
    <type>Text</type>
</CustomField>