force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Collateral_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Collateral_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Collateral Exceptions</description>
    <label>Collateral Exception</label>
</RecordType>