force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Connection_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Connection_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Connection Exceptions</description>
    <label>Connection Exception</label>
</RecordType>