force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Contact_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Contact_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Contact Exceptions</description>
    <label>Contact Exception</label>
</RecordType>