force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Covenant_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Covenant_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Covenant Exceptions</description>
    <label>Covenant Exception</label>
</RecordType>