force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Deposit_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Deposit_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Deposit Exceptions</description>
    <label>Deposit Exception</label>
</RecordType>