force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Entity_Involvement_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Entity_Involvement_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Entity Involvement Exceptions</description>
    <label>Entity Involvement Exception</label>
</RecordType>