force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Loan_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Loan_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Loan Exceptions</description>
    <label>Loan Exception</label>
</RecordType>