force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Monitor.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Monitor</fullName>
    <active>true</active>
    <description>Record Type holding Monitoring statistics Fields.</description>
    <label>Monitor</label>
</RecordType>