force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Participation_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Participation_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Participation Exceptions</description>
    <label>Participation Exception</label>
</RecordType>