force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Relationship_Exception.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Relationship_Exception</fullName>
    <active>true</active>
    <description>Record Type holding Fields pertinent to Relationship Exceptions</description>
    <label>Relationship Exception</label>
</RecordType>