force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/recordTypes/nMONITOR__Settings.recordType-meta.xml
<RecordType>
    <fullName>nMONITOR__Settings</fullName>
    <active>true</active>
    <description>Record Type contains Fields pertinent to monitoring configuration.</description>
    <label>Settings</label>
</RecordType>