force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__All.listView-meta.xml
<ListView>
    <fullName>nMONITOR__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>