force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Collateral_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Collateral_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Unique_Identifier__c</columns>
    <columns>nMONITOR__Collateral_Mgmt__c</columns>
    <columns>nMONITOR__Exception_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__IsCollateral__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Collateral Exceptions</label>
</ListView>