force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Connections_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Connections_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Household__c</columns>
    <columns>nMONITOR__Relationship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__IsConnection__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Connections Exceptions</label>
</ListView>