force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Contact_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Contact_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Contact__c</columns>
    <columns>nMONITOR__Relationship__c</columns>
    <columns>nMONITOR__Unique_Identifier__c</columns>
    <columns>nMONITOR__Tax_ID_or_SSN__c</columns>
    <columns>nMONITOR__Exception_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__isContact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contact Exceptions</label>
</ListView>