force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Covenant_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Covenant_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Unique_Identifier__c</columns>
    <columns>nMONITOR__Covenant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__IsCovenant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Covenant Exceptions</label>
</ListView>