force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Deposit_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Deposit_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Deposit__c</columns>
    <columns>nMONITOR__Relationship__c</columns>
    <columns>nMONITOR__Exception_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__isDeposit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Deposit Exceptions</label>
</ListView>