force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Entity_Involvement_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Entity_Involvement_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Relationship__c</columns>
    <columns>nMONITOR__Loan__c</columns>
    <columns>nMONITOR__Deposit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__IsEntityInvolvement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Entity Involvement Exceptions</label>
</ListView>