force-app/main/default/objects/nMONITOR__Informatica_Cloud_Integration__c/listViews/nMONITOR__Loan_Exceptions.listView-meta.xml
<ListView>
    <fullName>nMONITOR__Loan_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>nMONITOR__Unique_Identifier__c</columns>
    <columns>nMONITOR__Current_Product_Line__c</columns>
    <columns>nMONITOR__Current_Product_Type__c</columns>
    <columns>nMONITOR__Current_Product__c</columns>
    <columns>nMONITOR__Translated_Product_Line__c</columns>
    <columns>nMONITOR__Translated_Product_Type__c</columns>
    <columns>nMONITOR__Translated_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nMONITOR__IsLoan__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Loan Exceptions</label>
</ListView>